# devblog

./: build.sh  manage.py  pyproject.toml
accounts/: apps.py  models.py  serializers.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py  0002_profile_followers.py  0003_profile_address_profile_first_name_profile_last_name.py  0004_alter_profile_user.py  0005_remove_profile_first_name_remove_profile_last_name.py
devblog/: asgi.py  settings.py  urls.py  wsgi.py
post/: admin.py  models.py  serializers.py  urls.py  views.py
post/migrations/: 0001_initial.py  0002_alter_comment_post_alter_comment_user_and_more.py  0003_category_post_tags_post_category.py  0004_post_is_active.py  0005_alter_post_author.py  0006_alter_post_title.py
