[tool.poetry]
name = "devblog"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "4.2.4"
dj-database-url = "^2.1.0"
psycopg2-binary = "^2.9.7"
djangorestframework-simplejwt = "^5.3.0"
django-taggit = "^4.0.0"
djangorestframework = "^3.14.0"
gunicorn = "^21.2.0"
whitenoise = "^6.6.0"
django-cors-headers = "^4.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
